--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -96,7 +96,7 @@
 {% if jekyll.environment == 'production' %}
   <!-- PWA -->
   {% if site.pwa.enabled %}
-    <script defer src="{{ 'app.min.js' | prepend: js_dist | relative_url }}"></script>
+    {% comment %} <script defer src="{{ 'app.min.js' | prepend: js_dist | relative_url }}"></script> {% endcomment %}
   {% endif %}
 
   <!-- GA -->
